objects/Supplier__c.object
<CustomObject>
    <label>Supplier</label>
    <nameField>
        <label>Supplier Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Suppliers</pluralLabel>
    <sharingModel>Read</sharingModel>
    <fields>
        <fullName>Date__c</fullName>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <label>Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Place__c</fullName>
        <label>Place</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>REACH__c</fullName>
        <label>REACH</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <label>Region</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Asia</fullName>
                </value>
                <value>
                    <fullName>America</fullName>
                </value>
                <value>
                    <fullName>Afghanistan</fullName>
                </value>
                <value>
                    <fullName>Aland Islands</fullName>
                </value>
                <value>
                    <fullName>Albania</fullName>
                </value>
                <value>
                    <fullName>Al Jubail, Saudi Arabia</fullName>
                </value>
                <value>
                    <fullName>Algeria</fullName>
                </value>
                <value>
                    <fullName>Andorra</fullName>
                </value>
                <value>
                    <fullName>Angola</fullName>
                </value>
                <value>
                    <fullName>Anguilla</fullName>
                </value>
                <value>
                    <fullName>Antarctica</fullName>
                </value>
                <value>
                    <fullName>Antigua and Barbuda</fullName>
                </value>
                <value>
                    <fullName>Argentina</fullName>
                </value>
                <value>
                    <fullName>Armenia</fullName>
                </value>
                <value>
                    <fullName>Aruba</fullName>
                </value>
                <value>
                    <fullName>Australia</fullName>
                </value>
                <value>
                    <fullName>Austria</fullName>
                </value>
                <value>
                    <fullName>Azerbaijan</fullName>
                </value>
                <value>
                    <fullName>Bahamas</fullName>
                </value>
                <value>
                    <fullName>Bahrain</fullName>
                </value>
                <value>
                    <fullName>Bangladesh</fullName>
                </value>
                <value>
                    <fullName>Barbados</fullName>
                </value>
                <value>
                    <fullName>Belarus</fullName>
                </value>
                <value>
                    <fullName>Belgium</fullName>
                </value>
                <value>
                    <fullName>Belgium / Albama</fullName>
                </value>
                <value>
                    <fullName>Belize</fullName>
                </value>
                <value>
                    <fullName>Benin</fullName>
                </value>
                <value>
                    <fullName>Bermuda</fullName>
                </value>
                <value>
                    <fullName>Bhutan</fullName>
                </value>
                <value>
                    <fullName>Bolivia, Plurinational State of</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Shipper__c</fullName>
        <label>Shipper</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Consignee__c</fullName>
        <label>Consignee</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Mobile_No__c</fullName>
        <label>Mobile No</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>New_Field__c</fullName>
        <label>New Field</label>
        <length>33</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rich_Text__c</fullName>
        <label>Rich Text</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>FieldsShow__c</fullName>
        <defaultValue>false</defaultValue>
        <label>FieldsShow</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Picture_URL__c</fullName>
        <label>Picture URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Vendor_Code__c</fullName>
        <label>Vendor Code</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Notify_Party__c</fullName>
        <label>Notify Party</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Product_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product Name</label>
        <referenceTo>Product__c</referenceTo>
        <relationshipLabel>Suppliers</relationshipLabel>
        <relationshipName>Suppliers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Total_Amount__c</fullName>
        <label>Total Amount</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Notes_Remarks__c</fullName>
        <label>Notes/ Remarks</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Supplier_type__c</fullName>
        <label>Supplier type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Advance_Amount__c</fullName>
        <label>Advance Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Meeting_Person__c</fullName>
        <label>Meeting Person</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Supplier_Image__c</fullName>
        <formula>IMAGE( Picture_URL__c , &quot;Supplier Image&quot;, 200, 200)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Supplier Image</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Company_Website__c</fullName>
        <label>Company Website</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>From_Bloomchemag__c</fullName>
        <label>From Bloomchemag</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Check_Data_Import__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Check Data Import</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Supplier_type1212__c</fullName>
        <label>Supplier type1233</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>BLACKLISTED</fullName>
                </value>
                <value>
                    <fullName>BLOCKED</fullName>
                </value>
                <value>
                    <fullName>check status?</fullName>
                </value>
                <value>
                    <fullName>Distributor</fullName>
                </value>
                <value>
                    <fullName>Distributor of BASF</fullName>
                </value>
                <value>
                    <fullName>Distributor of Shell Chemicals</fullName>
                </value>
                <value>
                    <fullName>Integra Petrochemicals</fullName>
                </value>
                <value>
                    <fullName>Manufacture</fullName>
                </value>
                <value>
                    <fullName>Manufacturer</fullName>
                </value>
                <value>
                    <fullName>Manufacturer/ Contract Manufacturer</fullName>
                </value>
                <value>
                    <fullName>Manufacturer (Prospective)</fullName>
                </value>
                <value>
                    <fullName>Manufacturer and Exporter from India</fullName>
                </value>
                <value>
                    <fullName>Manufacturer of Phosphates groups</fullName>
                </value>
                <value>
                    <fullName>Manufactures</fullName>
                </value>
                <value>
                    <fullName>Methyl Co. Ltd., Taiwan</fullName>
                </value>
                <value>
                    <fullName>Non- Manufacturer</fullName>
                </value>
                <value>
                    <fullName>NOT TAKE FROM THEM AS THEY ASK CUSTOMER NAME</fullName>
                </value>
                <value>
                    <fullName>portal</fullName>
                </value>
                <value>
                    <fullName>Premier Manufacturer of chelating agents</fullName>
                </value>
                <value>
                    <fullName>Supplier</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Competitor_Acitivity__c</fullName>
        <label>Competitor Acitivity</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Point_of_Dicussion_2__c</fullName>
        <label>Point of Dicussion 2</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Point_of_Dicussion_3__c</fullName>
        <label>Point of Dicussion 3</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Products_Description__c</fullName>
        <label>Products Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Supplier_Contact_Person__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Supplier Contact Person</label>
        <referenceTo>Supplier_Contact_Person__c</referenceTo>
        <relationshipLabel>Suppliers</relationshipLabel>
        <relationshipName>Suppliers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Verkoper_Seller_Address__c</fullName>
        <label>Verkoper / Seller Address</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Supplier_with_Vendor_Code__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Supplier with Vendor Code</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Customer_Feedback_of_product__c</fullName>
        <label>Customer Feedback of product</label>
        <length>255</length>
        <type>Text</type>
    </fields>
</CustomObject>